K8s/networkpolicy/allow-monitoing.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-monitoring
  namespace: dev

spec:
  podSelector: {}

  policyTypes:
  - Ingress 

  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
