K8s/networkpolicy/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: dev

spec:
  podSelector: {}
  
  policyTypes:
  - Ingress
  - Egress
